tests/baselines/reference/declarationEmitExpressionInExtends3.errors.txt
tests/cases/compiler/declarationEmitExpressionInExtends3.ts(28,30): error TS4020: 'extends' clause of exported class 'MyClass' has or is using private name 'LocalClass'.
tests/cases/compiler/declarationEmitExpressionInExtends3.ts(36,75): error TS4020: 'extends' clause of exported class 'MyClass3' has or is using private name 'LocalInterface'.


==== tests/cases/compiler/declarationEmitExpressionInExtends3.ts (2 errors) ====
    export class ExportedClass<T> {
    	x: T;
    }
    
    class LocalClass<T, U> {
        x: T;
        y: U;
    }
    
    export interface ExportedInterface {
        x: number;
    }
    
    interface LocalInterface {
        x: number;
    }
    
    function getLocalClass<T>(c: T) {
        return LocalClass;
    }
    
    function getExportedClass<T>(c: T) {
        return ExportedClass;
    }
    
    
    
    export class MyClass extends getLocalClass<LocalInterface>(undefined)<string, number> { // error LocalClass is inaccisible
                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4020: 'extends' clause of exported class 'MyClass' has or is using private name 'LocalClass'.
    }
    
    
    export class MyClass2 extends getExportedClass<LocalInterface>(undefined)<string> { // OK
    }
    
    
    export class MyClass3 extends getExportedClass<LocalInterface>(undefined)<LocalInterface> { // Error LocalInterface is inaccisble
                                                                              ~~~~~~~~~~~~~~
!!! error TS4020: 'extends' clause of exported class 'MyClass3' has or is using private name 'LocalInterface'.
    }
    
    
    export class MyClass4 extends getExportedClass<LocalInterface>(undefined)<ExportedInterface> { // OK
    }
    